--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <script src="/vendor/scripts/jquery-2.1.4.js"></script>
     <script src="/vendor/scripts/handlebars.js"></script>
     <script src="/vendor/scripts/page.js"></script>
-    <script src="/scripts/githubToken.js"></script>
+    <!-- <script src="/scripts/githubToken.js"></script> -->
 
     <script src="/scripts/repo.js"></script>
     <script src="/scripts/repoView.js"></script>
